@@ -1,5 +1,5 @@
 # just the gdb debug file
-@PVER@-dbg binary: python-script-but-no-python-dep
+@PVER@-dbg binary: python3-script-but-no-python3-dep
 
 # pointless lintian ...
 @PVER@-dbg binary: hardening-no-fortify-functions
