@@ -1,5 +1,5 @@
 # intentional
-lib@PVER@-minimal binary: python-script-but-no-python-dep
+lib@PVER@-minimal binary: python3-script-but-no-python3-dep
 
 # lintian omission, multiarch string is encoded in the filename
 lib@PVER@-minimal binary: arch-dependent-file-not-in-arch-specific-directory
