@@ -9,7 +9,7 @@ lib@PVER@-stdlib binary: interpreter-not-absolute usr/lib/@PVER@/venv/scripts/po
 lib@PVER@-stdlib binary: unusual-interpreter usr/lib/@PVER@/venv/scripts/posix/pydoc #!__VENV_PYTHON__
 
 # the split is the reason for that
-lib@PVER@-stdlib binary: python-script-but-no-python-dep
+lib@PVER@-stdlib binary: python3-script-but-no-python3-dep
 
 # lintian omission, multiarch string is encoded in the filename
 lib@PVER@-stdlib binary: arch-dependent-file-not-in-arch-specific-directory
